@@ -1,5 +1,5 @@
 N:*:Default
-565
+568
 They say that you can't trust rumors.
 You have no more Black Potions of Death.
 They say that smart guys hang around at 1600'.
@@ -565,4 +565,7 @@ They say that reflection works *well* against ammos.
 They say that reflection helps you to think things.
 They say that bottles of potion are made of glass.
 They say that some cursed articles are too lovely to discard.
+They say that some creatures don't believe in magic.
+They say that you should learn to shoot yeeks.
+They say that even a level-100 priest might need potions of wisdom still.
 They say that 
